<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/text_background"
        android:layout_marginVertical="10dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="20dp"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:maxLines="2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Perro Bonito" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/groupName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawing_list_difficulty"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/imgPencil1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/pencil"
                app:layout_constraintTop_toTopOf="@id/groupName"
                app:layout_constraintStart_toEndOf="@id/groupName"
                app:layout_constraintBottom_toBottomOf="@id/groupName" />
            <ImageView
                android:id="@+id/imgPencil2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/pencil"
                app:layout_constraintTop_toTopOf="@id/groupName"
                app:layout_constraintStart_toEndOf="@id/imgPencil1"
                app:layout_constraintBottom_toBottomOf="@id/groupName" />

            <ImageView
                android:id="@+id/imgPencil3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/pencil"
                app:layout_constraintTop_toTopOf="@id/groupName"
                app:layout_constraintStart_toEndOf="@id/imgPencil2"
                app:layout_constraintBottom_toBottomOf="@id/groupName" />

            <ImageView
                android:id="@+id/imgPencil4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/pencil"
                app:layout_constraintTop_toTopOf="@id/groupName"
                app:layout_constraintStart_toEndOf="@id/imgPencil3"
                app:layout_constraintBottom_toBottomOf="@id/groupName" />

            <ImageView
                android:id="@+id/imgPencil5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/pencil"
                app:layout_constraintTop_toTopOf="@id/groupName"
                app:layout_constraintStart_toEndOf="@id/imgPencil4"
                app:layout_constraintBottom_toBottomOf="@id/groupName"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        app:layout_constraintTop_toBottomOf="@id/constraintTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constraintButtom"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintButtom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/steps_drawing_Back"
            android:visibility="invisible"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtNumberImages"/>



        <TextView
            android:id="@+id/txtNumberImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2/7" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/steps_drawing_next"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAllCaps="false"
            android:drawableRight="@drawable/arrow_next"
            app:layout_constraintStart_toEndOf="@id/txtNumberImages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>